# yves

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  yves.cabal
app/: Main.hs
paper/: ICFP.tex  bibliography.bib
papers/: beamerthemeamber.sty  defence.tex  predefence.bib  predefence.tex  proposal.tex  study.tex  thesis.bib  thesis.tex
src/Control/Monad/Scoped/: Free.hs
src/Control/Monad/Scoped/Free/: In.hs
src/Data/: Collection.hs  Container.hs  Core.hs  Named.hs
src/Yves/: Elaboration.hs  TermF.hs  Unification.hs  YTerm.hs
src/Yves/Core/: Evaluation.hs  Inference.hs  Level.hs  Subtyping.hs  Synthesis.hs  TermF.hs  Tyck.hs  YTerm.hs
src/Yves/Elaboration/: Monad.hs
