cabal-version:      3.0
name:               yves
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             TurtlePU
maintainer:         sokolov.p64@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options:        -Wall
    default-extensions: ImportQualifiedPost, NoImplicitPrelude
    default-language:   Haskell2010

library
    import:          options
    exposed-modules: Yves.Core.TermF
    build-depends:   base ^>=4.18
    hs-source-dirs:  src

executable yves
    import:         options
    main-is:        Main.hs
    build-depends:  base, yves
    hs-source-dirs: app
